# u1u2-bridge

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  format.ps1  install.sh  pyproject.toml  setup_udev.sh  smoke_test.sh  switch-mode.ps1  verify.ps1
bench/: crsf_udp_source.py  loopback.py
common/: __init__.py  channel_map.py  channels.default.toml  crsf.py  crsf_bridge.py  crsf_telemetry.py  joystick_to_crsf.py  telemetry_logger.py
common/systemd/: crsf-bridge@.service  joystick-to-crsf.service
docs/: CPE710-SETUP.md  DEPLOYMENT.md  HANDOFF.md  LESSONS-ARCHIVE.md  PLAN.md  inverter-schematic.md  opi5max-uart7-setup.md  wg-template.conf  wiring-opi5max.md  wiring.md
docs/baseline/: BASELINE.md
docs/cheatsheets/: switch-mode-cheatsheet.html
docs/handoff/: 2026-05-22-evening-uart-invert-blocker.md  2026-05-22-late-night-firmware-master.md  2026-05-22-late-uart7-bringup-complete.md  2026-05-23-evening-inverter-built-ufw-lesson.md  2026-05-24-e2e-elrs-bridge.md  2026-05-24-inverter-working-uart7-m2-pin26.md  2026-05-24-uart-inverter-victory.md  HANDOFF-2026-06-03-stage2-video.md  HANDOFF-2026-06-04-latency.md  HANDOFF-2026-06-04-stageA.md  HANDOFF-2026-06-04-stageB-B2.md  HANDOFF-2026-06-04-stageB-cont.md  HANDOFF-2026-06-04-stageB.md  HANDOFF-2026-06-04-stageC-mode2-cutover.md  HANDOFF-2026-06-05-field-tests-done-next-az-docs.md  (+22 more)
handoff-2026-05-25/: CLAUDE-MD-UPDATE.md  HANDOFF.md  u1u2-bridge-cheatsheet.html
hardware/: README.md  crsf_jitter_test.py  crsf_smoke_test.py
tests/: conftest.py
u1/: video_rx.sh
u2/: video_tx.sh
(+23 files in other folders)
