[project]
name = "u1u2-bridge"
version = "0.1.0"
description = "Wireless replacement for 8-wire cable between FPV ground units U1 and U2 (Orange Pi 5 + CPE710 + WireGuard)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyserial>=3.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["common", "u1", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async (catches sync-in-async)
    "T20",   # flake8-print (no stray print statements — logging only)
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
files = ["common", "u1", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["evdev", "evdev.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --ff -v"
pythonpath = ["."]
